added release link index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             This application is a great way to keep track of your vacations and share them with friends and family!.
         </p>
         <div id="thelink">
-            <a href="https://www.example.com/collectors-edition" target="_blank">Coming soon!</a>
+            <a href="https://github.com/1000argonians/collectorsedition/releases/tag/v1.0.0" target="_blank">Download!</a>
         </div>
     </body>
 </html>
