Cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
                 background-color: #0056b3;
             }
             #thelink {
-                text-align: center;
-                border: #333 solid 10px;
                 padding: 100px;
                 margin-top: 50px;
-                margin-left: 200px;
-                margin-right: 200px;
             }
 
             </style>
@@ -47,9 +43,11 @@
             In this simple-to-use application, you can add a vacation with tailored details and include your expected excursions for that 
             vacation. Excursions and vacations can be shared with social media applications found on your mobile device. Additionally, 
             you can set notifications for the dates that you have set for each vacation and excursion. 
-            This application is a great way to keep track of your vacations and share them with friends and family!.
+            This application is a great way to keep track of your vacations and share them with friends and family!
         </p>
         <div id="thelink">
+            <p>This link will direct you to the application's release page. </p>
+                <p>Tap "app-release.apk" to initiate the download.</p>
             <a href="https://github.com/1000argonians/collectorsedition/releases/tag/v1.0.0" target="_blank">Download!</a>
         </div>
     </body>
